# BiliHelper-personal

./: .dockerignore  .gitignore  ABOUT.md  CHANGELOG.md  DOC.md  Dockerfile  LICENSE  NOTIFY.md  README.md  app.php  composer.json  docker-compose.local.yml  docker-compose.test.yaml  docker-compose.test.yml  docker-compose.yml  index.php  phpunit.xml  phpunit.xml.dist
.github/: FUNDING.yml  Issue_Template_CN.md  Issue_Template_EN.md
captcha/: index.php
conf/: ConfigGenerator.php  (+4 more)
tools/activity_index/: .gitignore  pyproject.toml
tools/activity_index/src/activity_index/: __init__.py  main.py
tools/activity_index/src/activity_index.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tools/activity_index/src/activity_index/collectors/: __init__.py  space_dynamic.py
tools/activity_index/src/activity_index/core/: __init__.py  http_client.py  logger.py  resource_store.py
tools/activity_index/src/activity_index/models/: __init__.py  activity_lottery.py  article.py  charge_lottery.py  interactive_lottery.py  reservation_lottery.py
tools/activity_index/src/activity_index/parsers/: __init__.py  activity_lottery_parser.py  article_classifier.py  charge_lottery_parser.py  common.py  interactive_lottery_parser.py  reservation_lottery_parser.py
tools/activity_index/src/activity_index/validators/: __init__.py  payload_validator.py
tools/activity_index/src/activity_index/writers/: __init__.py  json_writer.py
tools/activity_index/tests/: __init__.py  test_article_classifier.py  test_bootstrap.py  test_output_payloads.py  test_type_parsers.py  test_workflow_contract.py
(+812 files in other folders)
