[project]
name = "activity-index"
version = "0.1.0"
description = "Unified activity index generator for BiliHelper-personal"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
activity-index = "activity_index.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
